# cpp_script

./: CMakeLists.txt
.fleet/: run.json
src/: ast.cc  enum.cc  gc.cc  ir.cc  lib.cc  main.cpp  token.cc
